agrego cambios a nosotros

--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -30,7 +30,12 @@
             </form>
         </div>
     </header>
-    <main></main>
+    <main>
+        <div class="nosotros">
+            <h1>Nosotros</h1>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Architecto ex voluptatibus deserunt, laboriosam eius maxime minima? Perferendis nobis, sapiente quia possimus exercitationem commodi magni fugiat culpa aspernatur dolor sequi sit!</p>
+        </div>
+    </main>
     <footer>
         <p>Todos los derechos reservados</p>
         <div class="redes"></div>
