--- a/pages/showroom.html
+++ b/pages/showroom.html
@@ -30,7 +30,12 @@
             </form>
         </div>
     </header>
-    <main></main>
+    <main>
+        <div class="showroom">
+            <h2>Showroom</h2>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Officia placeat velit porro enim nam quis autem quasi vel ipsam. Perferendis repellat possimus soluta quo voluptates ullam unde labore dignissimos sit.</p>
+        </div>
+    </main>
     <footer>
         <p>Todos los derechos reservados</p>
         <div class="redes"></div>
